[project]
name = "buscar-cep"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Silva",email = "xfellipesillva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.43.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
